[package]
name = "pcl-ce-data-migrator"
version = "0.1.0"
edition = "2024"
authors = ["PCL Community"]

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "fs"] }
slint = "1.14.1"

[build-dependencies]
slint-build = "1.14.1"
ureq = "2"
zip = "2"

[profile.release]
codegen-units = 1
lto = true
